# agentweld

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
agentweld-local/: pyproject.toml
agentweld-local/src/agentweld_local/: __init__.py  adapter.py
src/agentforge/: __init__.py
src/agentforge/cli/: add.py  generate.py  init.py  inspect.py  main.py  preview.py
src/agentforge/composition/: composer.py
src/agentforge/config/: __init__.py  loader.py  writer.py
src/agentforge/curation/: __init__.py  engine.py  quality.py  rules.py
src/agentforge/generators/: __init__.py  agent_card.py  base.py  readme.py  runner.py  system_prompt.py  tool_manifest.py
src/agentforge/generators/templates/: readme.md.j2
src/agentforge/models/: artifacts.py  composed.py  config.py  tool.py
src/agentforge/plugins/: __init__.py  loader.py
src/agentforge/sources/: __init__.py  base.py  mcp_http.py  mcp_stdio.py  registry.py
src/agentforge/utils/: console.py  errors.py
src/agentweld/: __init__.py
src/agentweld/cli/: add.py  enrich.py  generate.py  init.py  inspect.py  lint.py  main.py  preview.py  serve.py
src/agentweld/composition/: __init__.py  composer.py
src/agentweld/config/: __init__.py  loader.py  writer.py
src/agentweld/curation/: engine.py  enricher.py  quality.py  rules.py
src/agentweld/generators/: __init__.py  agent_card.py  base.py  deploy_config.py  loader.py  readme.py  runner.py  system_prompt.py  tool_manifest.py  workspace.py
src/agentweld/generators/templates/: Dockerfile.j2  adk_a2a_loader.py.j2  crewai_loader.py.j2  docker-compose.workspace.j2  docker-compose.yaml.j2  langgraph_loader.py.j2  nginx.conf.j2  readme.md.j2  system_prompt.md.j2
src/agentweld/loaders/: __init__.py  adk.py  crewai.py  langgraph.py
src/agentweld/models/: artifacts.py  composed.py  config.py  tool.py
src/agentweld/plugins/: __init__.py  loader.py
src/agentweld/sources/: __init__.py  base.py  mcp_http.py  mcp_registry.py  mcp_stdio.py  registry.py
src/agentweld/utils/: console.py  errors.py
tests/: conftest.py
tests/integration/: test_cli.py
tests/unit/: test_composer.py  test_config_io.py  test_config_model_local.py  test_deploy_config_generator.py  test_enricher.py  test_generate_workspace_cli.py  test_generators.py  test_loader_generator.py  test_loader_runtime.py  test_local_adapter.py  test_quality_scanner.py  test_rule_curator.py  test_serve.py  test_sources.py  test_tool_model.py  test_workspace_generator.py
