[project]
name = "agentforge"
version = "0.1.0"
description = "Turn any MCP server into a curated, composable, A2A-ready agent."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer[all]>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "ruamel.yaml>=0.18",
    "httpx>=0.27",
    "anyio>=4.4",
    "rich>=13.7",
    "jinja2>=3.1",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
agentforge = "agentforge.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentforge"]

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "B008",  # typer.Option() in function defaults is the required Typer pattern
    "B904",  # raise typer.Exit() inside except is intentional CLI flow control
]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["agentforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/agentforge"]
