[project]
name = "agentweld"
version = "0.3.2"
description = "Turn any MCP server into a curated, composable, A2A-ready agent."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Sheshnath Yadav", email = "sheshnathyadav08@gmail.com" },
]
keywords = ["mcp", "model-context-protocol", "agent", "a2a", "llm", "tool-curation", "agentic"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
    "typer[all]>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "ruamel.yaml>=0.18",
    "httpx>=0.27",
    "anyio>=4.4",
    "rich>=13.7",
    "jinja2>=3.1",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
anthropic = ["anthropic>=0.28"]
openai    = ["openai>=1.30"]
enrich    = ["anthropic>=0.28"]
loaders           = []
loaders-langgraph = ["langchain-mcp-adapters>=0.1", "langgraph>=0.2"]
loaders-crewai    = ["crewai>=1.10", "crewai-tools[mcp]>=0.1"]
loaders-adk       = ["google-adk>=0.1"]

[project.urls]
Homepage = "https://github.com/sheshnath08/agentweld"
Repository = "https://github.com/sheshnath08/agentweld"
"Bug Tracker" = "https://github.com/sheshnath08/agentweld/issues"
Changelog = "https://github.com/sheshnath08/agentweld/blob/main/CHANGELOG.md"

[project.scripts]
agentweld = "agentweld.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentweld"]

[tool.hatch.build.targets.sdist]
include = [
  "src/",
  "tests/",
  "LICENSE",
  "README.md",
  "CHANGELOG.md",
  "CONTRIBUTING.md",
  "pyproject.toml",
]

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "B008",  # typer.Option() in function defaults is the required Typer pattern
    "B904",  # raise typer.Exit() inside except is intentional CLI flow control
]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["agentweld"]

[[tool.mypy.overrides]]
module = [
    "agentweld.loaders.langgraph",
    "agentweld.loaders.crewai",
    "agentweld.loaders.adk",
]
# Optional framework deps (langgraph, crewai, google-adk, etc.) are not
# installed in the base environment. Ignore all import and type errors in
# these modules.
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/agentweld"]
