[project]
name = "agentweld-local"
version = "0.1.0"
description = "agentweld plugin: load tools from local Python modules."
requires-python = ">=3.11"
dependencies = ["agentweld>=0.1.0"]

[project.entry-points."agentweld.adapters"]
local = "agentweld_local.adapter:LocalAdapter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentweld_local"]
